--- a/#scorse/scss/header.scss
+++ b/#scorse/scss/header.scss
@@ -399,6 +399,7 @@ header {
 }
 
 .main_header__button {
+  display: block;
   background-color: #cc005e;
   line-height: 70px;
   padding: 0 20px 0 38px;
@@ -442,30 +443,23 @@ header {
   }
   .main_header__search {
     top: -7px;
+    width: 244px;
+
+    .search__window {
+      width: 250px;
+      padding-left: 10px;
+    }
   }
 }
 
 @media (max-width: 800px) {
   .main_header__search {
+    top: -7px;
+    width: 170px;
+
     .search__window {
-      &:focus {
-        width: 170px;
-      }
-    }
-
-    &:hover {
-      width: 170px;
-
-      .search__window {
-        width: 170px;
-      }
-    }
-    &:focus {
-      width: 170px;
-
-      .search__window {
-        width: 170px;
-      }
+      width: 175px;
+      padding-left: 10px;
     }
   }
 }
@@ -487,6 +481,15 @@ header {
 @media (max-width: 640px) {
   .services__mail {
     display: none;
+  }
+  .main_header__search {
+    top: -7px;
+    width: 95px;
+
+    .search__window {
+      width: 100px;
+      padding-left: 10px;
+    }
   }
 }
 
