--- a/#scorse/scss/post.scss
+++ b/#scorse/scss/post.scss
@@ -42,23 +42,300 @@ body {
   }
 }
 
-.main_content__general {
+.related_post__general {
 }
 
 .general__container {
+  padding: 25px 30px 50px;
+  margin: 0 0 55px;
+  background: #ffffff;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
 }
 
 .general__text {
+  padding: 0 0 50px;
+  margin: 0 0 50px;
   position: relative;
-  font-size: 18px;
-  line-height: 150%;
-  color: #000000;
-  &:first-child:first-letter {
-    font-weight: bold;
-    font-size: 38px;
-    //line-height: 150%;
+  .general__quote {
+    margin: 50px 0;
+    padding: 5px 0 5px 21px;
+    font-style: italic;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 150%;
+    color: #b8c2c8;
+    border-left: 1px solid #b8c2c8;
+  }
+  p {
+    position: relative;
+    font-size: 18px;
+    line-height: 150%;
+    color: #000000;
+    margin: 0 0 25px;
+    &:first-child:first-letter {
+      padding: 10px 10px 0px 0;
+      font-weight: bold;
+      font-size: 50px;
+      float: left;
+    }
+  }
+  &:before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    width: 90%;
+    height: 1px;
+    background-color: #b8c2c8;
+    bottom: 0;
+    left: 5%;
+  }
+  span {
+    position: relative;
+    padding: 0 0 0 10px;
+    font-size: 18px;
+    line-height: 150%;
+    color: #000000;
+    &:before {
+      content: "";
+      display: inline-block;
+      margin: 0 10px 0 0;
+      top: 0;
+      left: 0;
+      height: 8px;
+      width: 8px;
+      background: #000;
+      border-radius: 50%;
+    }
   }
 }
 
 .general__quote {
+  margin: 50px 0;
+  padding: 5px 0 5px 21px;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 150%;
+  color: #b8c2c8;
+  border-left: 1px solid #b8c2c8;
+}
+
+.general_link__row {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: flex-end;
+  span {
+    padding: 0 8px 0 0;
+    position: relative;
+    font-size: 12px;
+    line-height: 15px;
+    color: #b8c2c8;
+    &:before {
+      display: none;
+    }
+    &:after {
+      content: "";
+
+      position: absolute;
+      display: inline-block;
+      width: 1px;
+      height: 100%;
+      background-color: #b8c2c8;
+      top: 0;
+      right: 0;
+    }
+  }
+}
+
+.general_link__item {
+  a {
+    margin: 0 8px;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    transition-duration: 500ms;
+  }
+}
+
+.likedin {
+  background: url("../../img/likedin.svg") 50% 50% / contain no-repeat;
+  &:hover {
+    background: url("../../img/likedin-hover.svg") 50% 50% / contain no-repeat;
+  }
+}
+
+.facebook {
+}
+
+.twitter {
+}
+
+.related_post {
+  margin: 0 0 100px;
+  .container {
+    max-width: 1130px;
+  }
+}
+.related_post__title {
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 43px;
+  text-align: center;
+  margin: 0 0 45px;
+  color: #130947;
+}
+
+.related_post__slider {
+  position: relative;
+  .slick-list {
+    padding: 10px 0;
+    overflow: hidden;
+  }
+  /* Лента слайдов */
+  .slick-track {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+  }
+  .slick-slide {
+    margin: 0 15px;
+  }
+  .slick-arrow {
+    position: absolute;
+    bottom: 0;
+    font-size: 0;
+    width: 6px;
+    height: 10px;
+  }
+  /* Стрелка влево */
+  .slick-arrow.slick-prev {
+    background: url("../img/paggin-arrow-back.svg") 50% 50% / contain no-repeat;
+    left: calc(50% - 50px);
+    &:hover {
+      background: url("../img/paggin-arrow-back-hover.svg") 50% 50% / contain
+        no-repeat;
+    }
+  }
+  /* Стрелка вправо */
+  .slick-arrow.slick-next {
+    background: url("../img/paggin-arrow-next.svg") 50% 50% / contain no-repeat;
+    left: calc(50% + 46px);
+    &:hover {
+      background: url("../img/paggin-arrow-next-hover.svg") 50% 50% / contain
+        no-repeat;
+    }
+  }
+  .slick-dots {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .slick-dots li {
+  }
+  /* Активная точка */
+  .slick-dots li.slick-active {
+    button {
+      background: #800d42;
+    }
+  }
+  .slick-dots li button {
+    background: #ffffff;
+    border: 1px solid #800d42;
+    margin: 0 5px;
+    font-size: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+  }
+}
+
+.related_post__block {
+  width: 46%;
+  padding: 0px 0px 25px;
+  margin: 0 0 55px;
+  border: 1px solid #b8c2c8;
+  border-radius: 3px;
+  a {
+    transition-duration: 500ms;
+  }
+  &:hover {
+    background: #f9fafb;
+    border: 1px solid #f9fafb;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
+  }
+  &:hover a {
+    color: #cc005e;
+  }
+}
+
+.related_post__image {
+  display: inline-block;
+  margin: 0 0 17px;
+  img {
+    width: 100%;
+  }
+}
+
+.block__info {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+
+  span {
+    display: block;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: #000000;
+  }
+}
+
+.related_post__subtitle {
+  display: inline-block;
+  margin: 0 0 17px;
+  padding: 0 20px;
+  font-weight: 800;
+  font-size: 22px;
+  line-height: 27px;
+  color: #130947;
+}
+
+.block__text {
+  margin: 0 0 16px;
+  padding: 0 20px;
+  font-size: 14px;
+  line-height: 17px;
+  color: #333333;
+}
+
+.learn_more {
+  padding: 0 20px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #cc005e;
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 45px;
+    height: 8px;
+    background: url("../img/learnmore.svg");
+    top: calc(50% - 4px);
+    right: -40px;
+  }
+}
+
+@media (max-width: 500px) {
+  .main_screen {
+    h1 {
+      font-size: 40px;
+    }
+  }
 }
