--- a/#scorse/scss/post.scss
+++ b/#scorse/scss/post.scss
@@ -159,9 +159,9 @@ body {
 }
 
 .likedin {
-  background: url("../../img/likedin.svg") 50% 50% / contain no-repeat;
+  background: url("../img/likedin.svg") 50% 50% / contain no-repeat;
   &:hover {
-    background: url("../../img/likedin-hover.svg") 50% 50% / contain no-repeat;
+    background: url("../img/likedin-hover.svg") 50% 50% / contain no-repeat;
   }
 }
 
