--- a/css/blog.css
+++ b/css/blog.css
@@ -1119,31 +1119,31 @@ header {
 }
 
 .instagram {
-  background: url("../../img/instagram-grey.svg") 50% 50%/contain no-repeat;
+  background: url("../img/instagram-grey.svg") 50% 50%/contain no-repeat;
 }
 .instagram:hover {
-  background: url("../../img/instagram-grey-hover.svg") 50% 50%/contain no-repeat;
+  background: url("../img/instagram-grey-hover.svg") 50% 50%/contain no-repeat;
 }
 
 .youtube {
-  background: url("../../img/youtube-grey.svg") 50% 50%/contain no-repeat;
+  background: url("../img/youtube-grey.svg") 50% 50%/contain no-repeat;
 }
 .youtube:hover {
-  background: url("../../img/youtube-grey-hover.svg") 50% 50%/contain no-repeat;
+  background: url("../img/youtube-grey-hover.svg") 50% 50%/contain no-repeat;
 }
 
 .facebook {
-  background: url("../../img/facebook-grey.svg") 50% 50%/contain no-repeat;
+  background: url("../img/facebook-grey.svg") 50% 50%/contain no-repeat;
 }
 .facebook:hover {
-  background: url("../../img/facebook-grey-hover.svg") 50% 50%/contain no-repeat;
+  background: url("../img/facebook-grey-hover.svg") 50% 50%/contain no-repeat;
 }
 
 .twitter {
-  background: url("../../img/twitter-grey.svg") 50% 50%/contain no-repeat;
+  background: url("../img/twitter-grey.svg") 50% 50%/contain no-repeat;
 }
 .twitter:hover {
-  background: url("../../img/twitter-grey-hover.svg") 50% 50%/contain no-repeat;
+  background: url("../img/twitter-grey-hover.svg") 50% 50%/contain no-repeat;
 }
 
 .download {
