--- a/#scorse/scss/aside.scss
+++ b/#scorse/scss/aside.scss
@@ -176,34 +176,32 @@
 }
 
 .instagram {
-  background: url("../../img/instagram-grey.svg") 50% 50% / contain no-repeat;
+  background: url("../img/instagram-grey.svg") 50% 50% / contain no-repeat;
   &:hover {
-    background: url("../../img/instagram-grey-hover.svg") 50% 50% / contain
+    background: url("../img/instagram-grey-hover.svg") 50% 50% / contain
       no-repeat;
   }
 }
 
 .youtube {
-  background: url("../../img/youtube-grey.svg") 50% 50% / contain no-repeat;
+  background: url("../img/youtube-grey.svg") 50% 50% / contain no-repeat;
   &:hover {
-    background: url("../../img/youtube-grey-hover.svg") 50% 50% / contain
-      no-repeat;
+    background: url("../img/youtube-grey-hover.svg") 50% 50% / contain no-repeat;
   }
 }
 
 .facebook {
-  background: url("../../img/facebook-grey.svg") 50% 50% / contain no-repeat;
+  background: url("../img/facebook-grey.svg") 50% 50% / contain no-repeat;
   &:hover {
-    background: url("../../img/facebook-grey-hover.svg") 50% 50% / contain
+    background: url("../img/facebook-grey-hover.svg") 50% 50% / contain
       no-repeat;
   }
 }
 
 .twitter {
-  background: url("../../img/twitter-grey.svg") 50% 50% / contain no-repeat;
+  background: url("../img/twitter-grey.svg") 50% 50% / contain no-repeat;
   &:hover {
-    background: url("../../img/twitter-grey-hover.svg") 50% 50% / contain
-      no-repeat;
+    background: url("../img/twitter-grey-hover.svg") 50% 50% / contain no-repeat;
   }
 }
 
