--- a/#scorse/scss/about.scss
+++ b/#scorse/scss/about.scss
@@ -279,6 +279,17 @@ body {
   }
 }
 
+.map {
+  margin: 0 0 65px;
+  img {
+    width: 100%;
+  }
+}
+
+.container {
+  max-width: 1120px;
+}
+
 @media (max-width: 800px) {
   .we_are__row {
     flex-direction: column;
